Use Other-Extensions instead of deprecated Extensions in cabal file
This eliminates the following build warning:

> The field "extensions" is deprecated in the Cabal specification version 1.12. Please use 'default-extensions' or 'other-extensions' fields.

--- a/takusen-oracle.cabal
+++ b/takusen-oracle.cabal
@@ -64,7 +64,7 @@ Executable takusen_tests
                 , old-time
                 , QuickCheck    ==2.*
                 , random
-  Extensions: CPP DeriveDataTypeable ScopedTypeVariables
+  Other-Extensions: CPP DeriveDataTypeable ScopedTypeVariables
 
 Executable miniunit_tests
   Default-Language: Haskell2010
